--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="blue_200">#81D4FA</color>
+    <color name="blue_500">#03A9F4</color>
+    <color name="blue_700">#0288D1</color>
 </resources>
